--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -68,77 +68,77 @@
                     <h2 class="title_color">Varkala Gallery</h2>
                     <!-- <p>Who are in extremely love with eco friendly system.</p> -->
                 </div>
-                <div class="row imageGallery1" id="gallery">
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/ashokam_detail1.jpeg' %}" alt="">
+                <div class="row imageGallery1" id="gallery_page">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/ashokam_blog.jpeg' %}" alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/ashokam_detail1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/ashokam_blog.jpeg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/ashokam_detail2.jpeg' %}" alt="">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/ashokam_blog2.jpeg' %}" alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/ashokam_detail2.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/ashokam_blog2.jpeg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/sky_frame_1.jpg' %}" alt="">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/haiwa_room_2.jpeg' %}" alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/sky_frame_1.jpg' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/haiwa_room_2.jpeg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/nisara_homestay_1.jpeg' %}" alt="">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/villa_skyframe_1.jpg' %}" alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/nisara_homestay_1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/villa_skyframe_1.jpg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
                     
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/eva_beach_1.jpeg' %}" alt="">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/nisara_out1.jpeg' %}" alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/eva_beach_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/nisara_out1.jpeg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/moon_waves_1.jpg' %}" alt="">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/villa_skyframe.jpg' %}" alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/moon_waves_1.jpg' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/villa_skyframe.jpg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/villa_skyframe_1.jpg' %}" alt="">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/skyframe_room4.jpg' %}" alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/villa_skyframe_1.jpg' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/skyframe_room4.jpg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/cliffcnty_1.jpeg'}" alt="">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/skyframe_room3.jpg' %}"alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/cliffcnty_1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/skyframe_room3.jpg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 gallery_item">
-                        <div class="gallery_img">
-                            <img src="{% static 'image/property_img/cliffcnty_1.jpeg ' %}" alt="">
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/cliffcnty_1.jpeg' %}" alt="">
                             <div class="hover">
-                            	<a class="light" href="{% static 'image/property_img/cliffcnty_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/cliffcnty_1.jpeg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
