--- a/templates/index.html
+++ b/templates/index.html
@@ -334,7 +334,7 @@
 						<div class="hotel-card">
 							<div class="hotel-image">
 								<a href="{%url 'haiwa_details_details' %}">
-								<img src="{% static 'image/property_img/haiwa_hudels.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+								<img src="{% static 'image/property_img/haiwa_room_2.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
 								</a>
 								<div class="more-photos">See all</div>
 							</div>
