--- a/templates/ashokam_details.html
+++ b/templates/ashokam_details.html
@@ -152,7 +152,7 @@
                                 <div class="gallery_img">
                                     <img src="{% static 'image/property_img/ashokam_inside1.jpeg' %}" alt="">
                                     <div class="hover">
-                                        <a class="light" href="{% static 'image/property_img/villa3.jpg' %}"><i class="fa fa-expand"></i></a>
+                                        <a class="light" href="{% static 'image/property_img/ashokam_inside1.jpeg' %}"><i class="fa fa-expand"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -160,7 +160,7 @@
                                 <div class="gallery_img">
                                     <img src="{% static 'image/property_img/ashokam_inside2.jpeg' %}" alt="">
                                     <div class="hover">
-                                        <a class="light" href="{% static 'image/property_img/villa4.jpg' %}"><i class="fa fa-expand"></i></a>
+                                        <a class="light" href="{% static 'image/property_img/ashokam_inside2.jpeg' %}"><i class="fa fa-expand"></i></a>
                                     </div>
                                 </div>
                             </div>
