--- a/templates/ashokam_details.html
+++ b/templates/ashokam_details.html
@@ -168,7 +168,7 @@
                                 <div class="gallery_img">
                                     <img src="{% static 'image/property_img/ashokam_inside3.jpeg' %}" alt="">
                                     <div class="hover">
-                                        <a class="light" href="{% static 'image/property_img/ashokam_inside3.jpg' %}"><i class="fa fa-expand"></i></a>
+                                        <a class="light" href="{% static 'image/property_img/ashokam_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
                                     </div>
                                 </div>
                             </div>
