--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -112,9 +112,9 @@
                     </div>
                     <div class="col-md-4 gallery_page_item">
                         <div class="gallery_page_img">
-                            <img src="{% static 'image/property_img/villa_skyframe.jpg' %}" alt="">
+                            <img src="{% static 'image/property_img/moonwaves_5.jpeg' %}" alt="">
                             <div class="hover">
-                              <a class="light" href="{% static 'image/property_img/villa_skyframe.jpg' %}"><i class="fa fa-expand"></i></a>
+                              <a class="light" href="{% static 'image/property_img/moonwaves_5.jpeg' %}"><i class="fa fa-expand"></i></a>
                             </div>
                         </div>
                     </div>
