--- a/templates/ashokam_details.html
+++ b/templates/ashokam_details.html
@@ -74,7 +74,7 @@
                 <div class="container-hotel-info">
                     <div class="header">
                         <h1>Ashokam Beach Resort  <span></span></h1>
-                        <p>100 meter Walkable distance to the Beach</p>
+                        <p>Beach View Resort</p>
                     </div>
                     <br><br>
                     <div class="gallery">
