--- a/templates/haiwa_details.html
+++ b/templates/haiwa_details.html
@@ -114,7 +114,7 @@
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/haiwa_room_2.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/haiwa_room_2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/haiwa_room_2.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/haiwa_room3.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/haiwa_room3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/haiwa_room3.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -136,32 +136,32 @@
                         </div>
                     </div>        
     
-                    <!-- <div class="hotel-gallery" id="gallery">
+                    <div class="hotel-gallery" id="gallery">
                         <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/eva_room2.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/haiwa_inside1.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/eva_room2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/haiwa_inside1.jpeg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/eva_room1.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/haiwa_inside2.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/eva_room1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/haiwa_inside2.jpeg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/haiwa_inside3.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/haiwa_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                         <h1 class="Location">Location</h1>
                         <div class="map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3943.5011516462932!2d76.7021423!3d8.7388263!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05ef1c67bafa2b%3A0x76d0cb27ecb2e89a!2sThe%20Haiwa%20Beach%20Residency!5e0!3m2!1sen!2sin!4v1717566511971!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
