--- a/templates/contact.html
+++ b/templates/contact.html
@@ -97,6 +97,7 @@
                             <div class="info_item">
                                 <i class="lnr lnr-phone-handset"></i>
                                 <h6><a href="tel:">+91-8069640311</a></h6>
+                                <h6><a href="tel:">+91-7306141453</a></h6>
                                 <p>Mon to Sat 11 am to 10 pm</p>
                             </div>
                             <div class="info_item">
