--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,10 @@
         <!-- main css -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/responsive.css'  %}">
+
+        <style>
+
+        </style>
     </head>
     <body>
         <!--================Header Area =================-->
@@ -173,7 +177,12 @@
                                     </div>
                                 </div>
                                 <div class="details_info">
-                                    <a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                                    <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/cliffcounty/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/cliffcounty/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
 
                                     <a class="viewmore_a" href="{%url 'cliffcounty_details' %}">
                                         <button class="view_more_btn">View more</button>
