--- a/templates/index.html
+++ b/templates/index.html
@@ -223,6 +223,11 @@
                                 <div class="details_info">
                                     <a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/ashokam/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/ashokam/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+
                                     <a class="viewmore_a" href="{%url 'ashokam_details' %}">
                                         <button class="view_more_btn">View more</button>
                                     </a>
@@ -260,6 +265,11 @@
                                 <div class="details_info">
                                     <a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/skyframe/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/skyframe/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+                    
                                     <a class="viewmore_a" href="{%url 'skyframe_details' %}">
                                         <button class="view_more_btn">View more</button>
                                     </a>
@@ -293,6 +303,11 @@
 								</div>
 								<div class="details_info">
 									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/evebeach/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/evebeach/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
 
 									<a class="viewmore_a" href="{%url 'evebeach_details' %}">
 										<button class="view_more_btn">View more</button>
@@ -330,6 +345,12 @@
 								<div class="details_info">
 									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/villa_skyframe/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/villa_skyframe/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+
+
 									<a class="viewmore_a" href="{%url 'villa_skyframe_details' %}">
 										<button class="view_more_btn">View more</button>
 									</a>
@@ -365,6 +386,12 @@
 								<div class="details_info">
 									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/haiwa/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/haiwa/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+
+
 									<a class="viewmore_a" href="{%url 'haiwa_details_details' %}">
 										<button class="view_more_btn">View more</button>
 									</a>
@@ -398,6 +425,12 @@
 								</div>
 								<div class="details_info">
 									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/nisara/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/nisara/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+
 
 									<a class="viewmore_a" href="{%url 'nisara_details' %}">
 										<button class="view_more_btn">View more</button>
@@ -433,6 +466,12 @@
 								</div>
 								<div class="details_info">
 									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/moon_waves/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/moon_waves/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+
 
 									<a class="viewmore_a" href="{%url 'moon_waves_details' %}">
 										<button class="view_more_btn">View more</button>
